--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="header">
+        <div class="topGage"></div>
         <div class="center">
             <ul class="gnb">
                 <li><a href="#">HOME</a></li>
