--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
                 <div data-aos="fade" data-aos-duration="1000" class="rightport">
                     <div class="porttabWrap">
                         <div class="list">
-                            <a href="https://hskimport1.du.r.appspot.com/">
+                            <a target="_blank" href="https://hskimport1.du.r.appspot.com/">
                                 <div class="imgWrap">
                                     <img src="img/portfolio1.jpg">
                                 </div>
                                 <p class="title">(어메스커피 데스크탑 / 반응형 홈페이지)</p>
                             </a>
-                            <a href="https://hskimport1.du.r.appspot.com/login">
+                            <a target="_blank" href="https://hskimport1.du.r.appspot.com/login">
                                 <div class="imgWrap">
                                     <img class="login" src="img/port1login.jpg">
                                 </div>
@@ -187,13 +187,13 @@
                             </a>
                         </div>
                         <div class="list">
-                            <a href="https://hskimport2.du.r.appspot.com/">
+                            <a target="_blank" href="https://hskimport2.du.r.appspot.com/">
                                 <div class="imgWrap">
                                     <img src="img/portfolio2.jpg">
                                 </div>
                                 <p class="title">(Ai 갤러리 데스크탑 / 반응형 홈페이지)</p>
                             </a>
-                            <a href="https://hskimport2.du.r.appspot.com/admin">
+                            <a target="_blank" href="https://hskimport2.du.r.appspot.com/admin">
                                 <div class="imgWrap">
                                     <img class="login" src="img/port2login.jpg">
                                 </div>
@@ -201,13 +201,13 @@
                             </a>
                         </div>
                         <div class="list">
-                            <a href="https://hskimport3.du.r.appspot.com/">
+                            <a target="_blank" href="https://hskimport3.du.r.appspot.com/">
                                 <div class="imgWrap">
                                     <img src="img/portfolio3.jpg">
                                 </div>
                                 <p class="title">(가지마켓 데스크탑 / 반응형 홈페이지)</p>
                             </a>
-                            <a href="https://hskimport3.du.r.appspot.com/login">
+                            <a target="_blank" href="https://hskimport3.du.r.appspot.com/login">
                                 <div class="imgWrap">
                                     <img class="login" src="img/port3login.jpg">
                                 </div>
