포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -66,13 +66,20 @@
             <div data-aos="fade-left" data-aos-duration="1000" class="info2">
               <h4>학력 및 사회경험</h4>
               <p>두원공과 전문대학교 졸업</p>
-              <p>LG 디스플레이 전문기술직 (2017.5.22 ~ 2019.01.01)</p>
-              <p>LG 화학 전문기술직 (2019.01.02 ~ 2021.4.15)</p>
+              <p>정보처리기사, 산업안전기사 보유</p>
+              <p>LG 디스플레이 전문기술직 (2017.05 ~ 2019.01)</p>
+              <p>LG 화학 전문기술직 (2019.01 ~ 2021.04)</p>
               <p>
-                더조은 컴퓨터 학원 웹퍼블리셔 과정 (2022.06.12 ~ 2022.12.21)
+                더조은 컴퓨터 학원 웹퍼블리셔 과정 (2022.06 ~ 2022.12)
               </p>
               <p>
-                스탠다드 네트웍스 전송개발팀 사원 (2022.12.22 ~ 현재) 재직중
+                스탠다드 네트웍스 전송개발팀 사원 (2022.12 ~ 2024.08)
+              </p>
+              <p>
+                그랜드백화점 전산팀 주임 (2024.09 ~ 2025.02)
+              </p>
+              <p>
+                콘텐츠팩토리상상역 시스템팀 주임 (2025.07 ~ ) 재직중 
               </p>
             </div>
             <div data-aos="fade-left" data-aos-duration="1000" class="info3">
@@ -319,18 +326,32 @@
               <div class="list">
                 <a
                   target="_blank"
-                  href="https://sweet-crepe-965b08.netlify.app"
+                  href="https://rcs.std-ums.com/"
                 >
                   <div class="imgWrap">
-                    <img src="img/portfolio4.jpg" />
+                    <img src="img/portfolio4.png" />
                   </div>
-                  <p class="title">(pacificOcean 데스크탑 / 반응형 홈페이지)</p>
+                  <p class="title">스탠다드네트웍스 RCS B2B 웹사이트</p>
+                  <p class="title">
+                    Spring Boot + WebFlux 기반 비동기 통신 구조 개발<br />
+                    RCS(기업 메시징 서비스) 웹 플랫폼 개발 및 런칭 리더 경험<br />
+                    KISA 불법 스팸 관리 서비스 프로세스 개발 및 대응
+                  </p>
                 </a>
-                <a target="_blank" href="https://github.com/muganghskim/stdApi">
+              </div>
+              <div class="list">
+                <a
+                  target="_blank"
+                  href="https://www.cdec.or.kr"
+                >
                   <div class="imgWrap">
-                    <img class="login" src="img/port4login.jpg" />
+                    <img src="img/portfolio5.png" />
                   </div>
-                  <p class="title">(백엔드 api / 추가 기능 개발중)</p>
+                  <p class="title">스마트 민방위 관리 시스템 유지보수</p>
+                  <p class="title">
+                    node.js + express + ejs 기반 웹사이트 유지보수<br />
+                    CSAP(saas) 보안 간편인증 고도화 개발 및 대응 진행 중
+                  </p>
                 </a>
               </div>
             </div>
