포트폴리오 수정 2차

--- a/index.html
+++ b/index.html
@@ -249,16 +249,25 @@
               </p>
             </div>
             <div data-aos="fade-left" data-aos-duration="1000" class="info">
-              <h4>pacificOcean</h4>
+              <h4>RCS 메시징 플랫폼</h4>
               <p>
-                - 개발기간 : 약 2달<br />- 개발인원 : 본인<br />- 작업 기여도 :
-                100%<br />- 주요특징 : 친환경 쇼핑몰 웹사이트 구현 및 실서비스를
-                위해 개발중, <br />프론트 : 리액트로 구현, 리코일 사용하여
-                상태관리, 반응형 구현 <br />백엔드 : 스프링 시큐리티, jwt 사용
-                회원가입 로그인 기능, oauth2 이용 간편로그인 기능, 중복 방지를
-                위한 이메일 인증 기능 구현 <br />DB : postgres 사용 관계형 db
-                구현, <br />장바구니 및 결제, import를 이용해 제품 결제 및 관리
-                기능 구현 예정
+                - 개발기간 : 약 4달<br />- 개발인원 : 3인<br />- 작업 기여도 :
+                60%<br />- 주요특징 : B2B 용 RCS 메시징 플랫폼 구현 및 실서비스를
+                위해 개발 <br />프론트 : 리액트로 구현, 리코일 사용하여
+                상태관리, 반응형 구현 <br />백엔드 : 스프링 부트 + 웹플럭스 사용하여
+                메시지 템플릿 작성 및 전송 기능, 주소록 기능 개발 <br />DB : postgres 사용 관계형 db
+                구현, <br /> 팀 리더로 참여하여 B2B 타겟 대규모 트래픽 대상으로 개발하였으나 현재 RCS에 대한
+                단말기 지원이 완벽하지 않아 실서비스는 미진함<br /> 스탠다드네트웍스 재직하며 KISA 스팸 대응 프로그램 제작 경험 있음
+              </p>
+            </div>
+            <div data-aos="fade-left" data-aos-duration="1000" class="info">
+              <h4>스마트 민방위</h4>
+              <p>
+                - 유지보수기간 : 약 3달<br />- 개발인원 : 3인<br />- 작업 기여도 :
+                60%<br />- 주요특징 : 국내 지자체 약 100군데 민방위 서비스 진행 중
+                <br />프론트 : html + ejs 태그 <br />백엔드 : node.js + express 사용
+                <br />DB : mysql 사용 관계형 db
+                <br />CSAP(saas) 간편 보안 인증 진행하며 고도화 개발 중
               </p>
             </div>
           </div>
