--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                 - 개발기간 : 약 4달<br />- 개발인원 : 3인<br />- 작업 기여도 :
                 60%<br />- 주요특징 : B2B 용 RCS 메시징 플랫폼 구현 및 실서비스를
                 위해 개발 <br />프론트 : 리액트로 구현, 리코일 사용하여
-                상태관리, 반응형 구현 <br />백엔드 : 스프링 부트 + 웹플럭스 사용하여
-                메시지 템플릿 작성 및 전송 기능, 주소록 기능 개발 <br />DB : postgres 사용 관계형 db
-                구현, <br /> 팀 리더로 참여하여 B2B 타겟 대규모 트래픽 대상으로 개발하였으나 현재 RCS에 대한
-                단말기 지원이 완벽하지 않아 실서비스는 미진함<br /> 스탠다드네트웍스 재직하며 KISA 스팸 대응 프로그램 제작 경험 있음
+                상태관리, 반응형 구현 <br />백엔드 : 메시지 템플릿 작성 및 전송 기능, 주소록 기능 개발<br /> 
+                팀 리더로 참여하여 대규모 트래픽 대상으로 개발하였으나<br /> 
+                현재 RCS에 대한 단말기 지원이 완벽하지 않아 실서비스는 미진함<br /> 
+                스탠다드네트웍스 재직하며 KISA 스팸 대응 프로그램 제작 경험 있음
               </p>
             </div>
             <div data-aos="fade-left" data-aos-duration="1000" class="info">
