--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>김현승 포토폴리오 소개 페이지</title>
+    <title>김현승 포트폴리오 소개 페이지</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link
@@ -40,7 +40,7 @@
             <a href="#">
               <img src="img/logo.png" />
             </a>
-            <h2 class="title">김현승의 개인포토폴리오 사이트입니다.</h2>
+            <h2 class="title">김현승의 개인포트폴리오 사이트입니다.</h2>
             <span class="typing"></span>
           </div>
         </div>
